[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "langchain-core>=0.3.31",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
